--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 1000",
-    "build": "next build -p 1000",
+    "dev": "next dev -p 2000",
+    "build": "next build -p 2000",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +13,7 @@
     "@module-federation/nextjs-mf": "^6.0.7",
     "graphql": "^16.8.1",
     "next": "^13.2.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "webpack": "^5.89.0"
