--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ PORT=2000
 
 
 # Next auth
-NEXTAUTH_URL=localhost:2000
+NEXTAUTH_URL=http://localhost:2000
+NEXTAUTH_SECRET=say_lalisa_love_me_lalisa_love_me_hey
