--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@apollo/client": "^3.8.9",
     "@module-federation/nextjs-mf": "^6.0.7",
+    "@types/js-cookie": "^3.0.6",
     "graphql": "^16.8.1",
+    "js-cookie": "^3.0.5",
     "next": "^13.2.4",
     "next-auth": "^4.24.5",
     "react": "^18",
