--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 2000",
-    "build": "next build -p 2000",
-    "start": "next start",
+    "build": "next build",
+    "start": "next start -p 2000",
     "lint": "next lint"
   },
   "dependencies": {
