--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ PORT=2000
 # Next auth
 NEXTAUTH_URL=http://localhost:2000
 NEXTAUTH_SECRET=say_lalisa_love_me_lalisa_love_me_hey
+CHILD_URL=http://localhost:2001
